--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -11,7 +11,7 @@
             <ul class="navbar-nav">
                 <li class="nav-item">
                 <%= link_to logout_path, class: %i[nav-link] do %>
-                    Sign-out
+                    <i class="fas fa-sign-out-alt"></i>
                 <% end %>
                 </li>
             </ul>
@@ -27,7 +27,7 @@
                 </li>
                 <li class="nav-item">
                     <%= link_to login_path, class: %i[nav-link] do %>
-                        Sing-in
+                        <i class="fas fa-sign-in-alt"></i>
                     <% end %>
                 </li>
             </ul>
